Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pondělí, 15. 11. 2021</h5>
+<h5>Úterý, 16. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Zeleninová s hovězím masem</strong>
@@ -50,45 +50,30 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 15.11.2021</div>
+<div class="nadpis">Úterý 16.11.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Medovník</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Brownie bez lepku</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Perníkový koláč s hruškami, mandle</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
 <li class="polevka">
-<div class="polozka">300ml Pórková polévka s bramborami, libeček samostatně <em title="Mléko">7</em></div>
+<div class="polozka">300ml Karotkový krém, chilli, zázvor samostatně   <em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Pórková polévka s bramborami, libeček s menu <em title="Mléko">7</em></div>
+<div class="polozka">300ml Karotkový krém, chilli, zázvor s menu <em title="Mléko">7</em></div>
 <div class="cena">29 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí gyros, restovaný bulgur, pita chléb, čerstvá zelenina, česnekový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda plněná sušenými rajčaty, bramborová kaše, rukola <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Vepřová pečeně, dušené červené zelí s hruškou, pečené batáty    <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
+<div class="polozka"><span class="poradi">2. </span>140g Bun cha, grilovaný vepřový bok, rýžové nudle, čerstvá zelenina, koriandr, arašídy  <em title="Obiloviny obsahující lepek">1</em><em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">159 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Vegetariánská tikka masala, jasmínová rýže, bylinkový jogurt <em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="polozka"><span class="poradi">3. </span>300g Quesadilla plněná ragú z pečených paprik a lilků, pažitkový creme fraiche, variace listových salátů <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
@@ -103,13 +88,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  ok</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Hrachová kaše s naší norimberskou půlmetrovou klobásou (96% masa), sázené vejce, škvarky s cibulí, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s feferonkou a cibulí, naše bramboráčky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřová játra na cibulce, dušená jasmínová rýže</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Smažená vinná klobása, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 180g Kapsa z vepřové pečeně plněná sušenými rajčaty, slaninou a vejcem na roštu, květákové pyré, grilovaná karotka</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na smetanové omáčce se šunkou a kapary, špecle</td><td class="menuPrice">136,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Dorůžova pečený hovězí roastbeef, pepřová redukce, smažené hranolky, tatarka, cibule, volské oko</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, filírovaná kuřecí prsa, tortilový chips, vařené vejce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,04L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažené holandské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kung-pao z kuřecího masa se zeleninou a arašídy, dušená jasmínová rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dušená hovězí roštěná na kořenové zelenině s červeným vínem, mrkvové pyré, vídeňská cibule </td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené kuřecí stehno na divoko, dušená rýže, fazolové lusky na másle</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně se šunkou gratinované sýrem, smažené hranolky, mexický dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka na žampionovém ragú s pórkem, grusetky promíchané olivovým olejem a strouhaným parmazánem, grilované rajče</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine s anglickou slaninou a kukuřicí zjemněné smetanou, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové krkovice na fazolových luskách s anglickou slaninou, smažené bramborové plátky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným zelím, kynuté houskové knedlíky a bramborové knedlíky   </td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný citrónovým dresinkem, medailonky z vepřové panenky, opečená paprika, vařené vejce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -123,7 +108,44 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Dršťková polévka 1a</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">200g</td><td class="title">Opečená jitrnice a jelítko s lepenicí a vídeňskou cibulí, hořčice 1a,7,10</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažené vepřové řízečky s naším bramborovým salátem a citronem 1a,3,7,9,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">100g</td><td class="title">Zeleninový salát s grilovaným hermelínem v anglické slanině, brusinkovou majonézou a rozpečenou bylinkovou bagetou 1a,3,7,10,12</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">150 g</td>
+<td class="title">Tlačenka s cibulovým salátem, octem a naším chlebem 1ab</td>
+<td class="pricem">89 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Gulášová z hovězího krku s domácí majoránkovou houskou 1a</td>
+<td class="pricem">69 Kč</td>
+</tr>
+<tr>
+<td class="amount">1 ks</td>
+<td class="title">Pečené vepřové koleno v medovo pivní marinádě s variací hořčic,
+		křenem, cibulovým chlebem a nakládanou zeleninou 1abc,10</td>
+<td class="pricem">285 Kč</td>
+</tr>
+<tr>
+<td class="amount">200 g</td>
+<td class="title">Dušená hovězí líčka na červeném víně
+s bramborovo pastinákovým pyré a restovanou zeleninou
+se žampiony 1a,7,9,12</td>
+<td class="pricem">239 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Domácí vdolky s povidly, tvarohovým krémem
+a skořicovým cukrem 1a,3,7</td>
+<td class="pricem">89 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Cibulačka se sýrovým toastem 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřové výpečky s červeným zelím a variací našich knedlíků 1a,3,7,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Smažené kapustové karbanátky s mletým masem s bramborovou kaší a okurkovým salátem 1a,3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Brynzové bramborové halušky s anglickou slaninou a pažitkou 1a,3,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
@@ -131,7 +153,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s okurkovymi tzatziki, zeleninovy pilaf z basmati ryze, salatek 139</li><li>Pecena cerstva kambala a filet z norskeho lososa s okurkovymi tzatziki, zeleninovy pilaf z basmati ryze, salatek 169</li><li>Pomalu dusene secuanske hovezi ve sladke omacce se zazvorem, secuanskym peprem a korenim peti vuni, jasminova ryze, salatek 139</li><li>Pecena plec z mladeho divocaka na jalovci, bavorske bramborove knedliky s houskou, cervena repa na vine {L} 159</li><li>Ratatouille z pecene zeleniny s bylinkami a balkanskym syrem, hrachova kase se smazenou cibulkou, salatek 139</li></ol>
+<ol><li>Thajske panang kari s kousky rybich filetu {hejk, amur, makrela}, arasidy, kokosovym mlekem, paprikami a cuketami, jasminova ryze 139</li><li>Paella s plody more {krevety, slavky, chobotnice, kalamary}, pecenou zeleninou a zelenymi bylinkami, salatek 175</li><li>Kruti medailonky po jihoindicku v citronove omacce se zazvorem, kokosovym mlekem a jogurtem, jasminova ryze, salatek 139</li><li>Spagety s nudlickami mladeho divocaka, paprickami jalapenos, kapustou a smazenou cibulkou, parmezan {L} 169</li><li>Imam bayildi – turecke zapecene lilky s restovanou cibulkou, rajcaty a zelenymi bylinkami, bulgur, smetanovy jogurt, salatek {L} 139 </li></ol>
 </td>
 </tr>
 </table>
