Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,6 +52,11 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 16.11.2021</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Kremrole</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Karotkový krém, chilli, zázvor samostatně   <em title="Mléko">7</em></div>
 <div class="cena">39 Kč</div>
@@ -62,6 +67,11 @@
 <div class="cena">29 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="polevka">
+<div class="polozka">Brownie bez lepku</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="jidlo">
 <div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda plněná sušenými rajčaty, bramborová kaše, rukola <em title="Mléko">7</em><em title="Hořčice">10</em></div>
 <div class="cena">149 Kč</div>
@@ -69,7 +79,7 @@
 </li>
 <li class="jidlo">
 <div class="polozka"><span class="poradi">2. </span>140g Bun cha, grilovaný vepřový bok, rýžové nudle, čerstvá zelenina, koriandr, arašídy  <em title="Obiloviny obsahující lepek">1</em><em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">159 Kč</div>
+<div class="cena">149 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
@@ -153,7 +163,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske panang kari s kousky rybich filetu {hejk, amur, makrela}, arasidy, kokosovym mlekem, paprikami a cuketami, jasminova ryze 139</li><li>Paella s plody more {krevety, slavky, chobotnice, kalamary}, pecenou zeleninou a zelenymi bylinkami, salatek 175</li><li>Kruti medailonky po jihoindicku v citronove omacce se zazvorem, kokosovym mlekem a jogurtem, jasminova ryze, salatek 139</li><li>Spagety s nudlickami mladeho divocaka, paprickami jalapenos, kapustou a smazenou cibulkou, parmezan {L} 169</li><li>Imam bayildi – turecke zapecene lilky s restovanou cibulkou, rajcaty a zelenymi bylinkami, bulgur, smetanovy jogurt, salatek {L} 139 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a olivami v olivovem oleji, cizrnovy hummus, salatek 139</li><li>Peceny filet z cerstveho halibuta s pecenymi rajcaty a olivami v olivovem oleji, cizrnovy hummus, salatek 169</li><li>Indonesky kruti sataj kebab s arasidovou omackou, zeleninovy pilaf z basmati ryze, salatek 139</li><li>Grilovane medailonky ze seleciho hrbetu a kyty s merunkovym catny, gratinovane brambory, salatek 169</li><li>Indicke kvetakove kari s cizrnou, rajcaty a kokosovym mlekem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
