Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,28 @@
 <h5>Úterý, 16. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová s hovězím masem</strong>
+<strong>VE DNE 17.11.2021 JE JÍDELNA ZAVŘENÁ</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							0,-
+						</span>
+</p>
+<p>
+<strong>Cizrnová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny bolognesse s parmazánem</strong>
+<strong>Hovězí s koprovou omáčkou a Houskovým knedlíkem NEBO vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Maďarský Vepřový guláš s rýží</strong>
+<strong>Kuřecí křidélka na míchaném salátku</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
@@ -73,7 +80,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda plněná sušenými rajčaty, bramborová kaše, rukola <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda plněná sušenými rajčaty, šťouchané brambory s cibulkou a pažitkou, rukola <em title="Mléko">7</em><em title="Hořčice">10</em></div>
 <div class="cena">149 Kč</div>
 <div class="clear"></div>
 </li>
