--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 17. 11. 2021</h5>
+<h5>Čtvrtek, 18. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>VE DNE 17.11.2021 JE JÍDELNA ZAVŘENÁ</strong>
@@ -57,7 +57,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 17.11.2021</div>
+<div class="nadpis">Čtvrtek 18.11.2021</div>
 <ul>
 <li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
@@ -70,22 +70,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou, nudlemi a játrovou rýží</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hráškový krém s krutony</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Houbový krém se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Rizoto z vepřového masa po srbsku, strouhaný sýr, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, chlupaté knedlíky, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Pečená vepřová panenka do růžova, smetanová omáčka s barevným drceným pepřem, smažené bramborové plátky </td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">INSTA sleva</td><td class="menuName">Pokud sleduješ náš profil "Senkyrna7" na instagramu, pak můžeš čerpat slevu: 150g  Pečená vepřová panenka do růžova, smetanová omáčka s barevným drceným pepřem, smažené bramborové plátky </td><td class="menuPrice">89,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí soté s chilli a zeleninou, smažené bramborové hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem, hořčice, cibule</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 200g Sekaný vepřový biftek na jemné pepřové omáčce, zelené fazolky, sázené vejce</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené vinná klobása, vařené brambory s máslem a šnitlíkem, hořčice, cibule</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné houbové omáčce, restované špecle</td><td class="menuPrice">136,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Smažená kapsa z kuřecích prsou plněná moravským uzeným, sýrem a pórkem, bramborový salát, citron</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným zelím, kynuté houskové a bramborové knedlíky</td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený sýr (45%) vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">čtvrtek Instasleva</td><td class="menuName">Pokud nás sleduješ na instagramu "Senkyrna7" tak pro tebe máme na čtvrtek: Pečená vepřová panenka do růžova, smetanová omáčka s barevným drceným pepřem, smažené bramborové plátky  89,- (PLATÍ ve čtvrtek)</td><td class="menuPrice">čtvrtek</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s cibulí a feferonkou, naše bramboráčky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu s volským okem, pečené brambory s kmínem, mexický dip</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažená vepřová kotleta bez kosti, vařené brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou na grilované zelenině s bazalkovým pestem, celerové hranolky, zakysaná smetana  </td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové noky s houbami zjemněné smetanou, filírovaná vepřová panenka, parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečené husí stehno s červeným zelím, kynuté houskové a bramborové knedlíky   </td><td class="menuPrice">195,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný olivovým olejem, smažené kuřecí stripsy vařené vejce</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">0,4L</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4L</td><td class="menuName">Extra chmelená 12° (Dej si dva extra chmeli a domů dostaneš za věrnost 0,5L plechovku 12°)</td><td class="menuPrice">42,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smetanovo jableční řez s čokoládou a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -130,7 +121,7 @@ a skořicovým cukrem 1a,3,7</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Státní svátek - Den boje za svobodu a demokracii</td><td class="pricem"></td><tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Žampionový krém 1a,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">300g</td><td class="title">U nás dělané bramborové knedlíky plněné uzeným masem s kysaným zelím a smaženou cibulkou 1a,3,12</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Trhaná vepřová krkovice Gyros s opečeným pita chlebem, ledovým salátem a jogurtovým dresinkem 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety Aglio - Olio a peperoncino s rukolou a sýrem Forte Classico 1a,3,7</td><td class="pricem">125 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
