Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,21 +14,21 @@
 						</span>
 </p>
 <p>
-<strong>Cizrnová</strong>
+<strong>Brokolicová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Hovězí s koprovou omáčkou a Houskovým knedlíkem NEBO vařeným bramborem</strong>
+<strong>Vepřová krkovička na pivu se šťouchaným bramborem a dušenou karotkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí křidélka na míchaném salátku</strong>
+<strong>Kuřecí stehno tandoori s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
@@ -59,7 +59,17 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 18.11.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Minestrone, parmazán samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Minestrone, parmazán s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -129,7 +139,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a olivami v olivovem oleji, cizrnovy hummus, salatek 139</li><li>Peceny filet z cerstveho halibuta s pecenymi rajcaty a olivami v olivovem oleji, cizrnovy hummus, salatek 169</li><li>Indonesky kruti sataj kebab s arasidovou omackou, zeleninovy pilaf z basmati ryze, salatek 139</li><li>Grilovane medailonky ze seleciho hrbetu a kyty s merunkovym catny, gratinovane brambory, salatek 169</li><li>Indicke kvetakove kari s cizrnou, rajcaty a kokosovym mlekem, jasminova ryze 139</li></ol>
+<ol><li>Thajske zelene kari s kousky rybich filetu {hejk, makrela, halibut}, zeleninou, kokosovym mlekem a arasidy, jasminova ryze 139</li><li>Indonesky nasi goreng – smazena jasminova ryze s cerstvymi krevetami, hraskem, fazolkami, krevetovou pasou, tamarindem a vajecnymi omeletkami, salatek 175</li><li>Burrito s pikantnim mexickym carnitas {trhane veprove} a goudou, pecene baby brambory, salatek {L} 139</li><li>Zverinovy paprikas {srnci, danci, divocak, koroptev} s pecenymi paprikami, bramborami, divokym korenim a slaninou, bavorske bramborove knedliky {L} 165</li><li>Cizrnovy hummus s balkanskym syrem a olivovym olejem, pecene baby brambory, salatek 139</li></ol>
 </td>
 </tr>
 </table>
