--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -59,6 +59,11 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 18.11.2021</div>
 <ul>
+<li class="poznamka">
+<div class="polozka">Ořechový košíček s čokoládou</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Minestrone, parmazán samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
@@ -67,6 +72,26 @@
 <li class="polevka">
 <div class="polozka">300ml Minestrone, parmazán s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Pečené kuřecí prso, jáhlové risoto s grilovanou zeleninou, tymiánová omáčka <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Hovězí kýta na česneku, dušený špenát, houskový knedlík <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Grilovaný hermelín, hruškové chutney, vařené brambory s bylinkovým máslem, míchaný salát <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Okurkový salát</div>
+<div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 </ul>
