--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -64,6 +64,11 @@
 <div class="cena">59 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Minestrone, parmazán samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
