Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,24 +14,24 @@
 						</span>
 </p>
 <p>
-<strong>Brokolicová</strong>
+<strong>Vývar se zeleninou a celestýnskými nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová krkovička na pivu se šťouchaným bramborem a dušenou karotkou</strong>
+<strong>Vepřová plec na zázvoru a slanině</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí stehno tandoori s rýží</strong>
+<strong>Těstoviny s kuřecím masem a sýrovou omáčkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
