Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -21,7 +21,7 @@
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na zázvoru a slanině</strong>
+<strong>Vepřová plec na zázvoru a slanině s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
