Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -151,7 +151,7 @@ a skořicovým cukrem 1a,3,7</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske zelene kari s kousky rybich filetu {hejk, makrela, halibut}, zeleninou, kokosovym mlekem a arasidy, jasminova ryze 139</li><li>Indonesky nasi goreng – smazena jasminova ryze s cerstvymi krevetami, hraskem, fazolkami, krevetovou pasou, tamarindem a vajecnymi omeletkami, salatek 175</li><li>Burrito s pikantnim mexickym carnitas {trhane veprove} a goudou, pecene baby brambory, salatek {L} 139</li><li>Zverinovy paprikas {srnci, danci, divocak, koroptev} s pecenymi paprikami, bramborami, divokym korenim a slaninou, bavorske bramborove knedliky {L} 165</li><li>Cizrnovy hummus s balkanskym syrem a olivovym olejem, pecene baby brambory, salatek 139</li></ol>
+<ol><li>Peceny cerstvy pstruh s kaparovo-horcicnym maslem, stouchane brambory s kapustou, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka s kaparovo-horcicnym maslem, bramborovy salat s cerstvymi okurkami, petrzelkou a majonezou 175</li><li>Lasagne s hovezim a krutim masem, rajcaty, pecenymi paprikami a zelenymi bylinkami, zapecene ve smetanove omacce, salatek {L} 139</li><li>Smazene rizecky z mladeho divocaka a selete domaciho, bramborovy salat s cerstvymi okurkami, petrzelkou a majonezou, citron {L} 169</li><li>Pecene kapie, lilky a cukety zapecene s goudou a zelenymi bylinkami, cocka s ryzi, okurkove tzatziki 139</li></ol>
 </td>
 </tr>
 </table>
